# logolicious-android

./: build.gradle  dependencies.gradle  local.properties  settings.gradle  spotless.gradle
checkerboarddrawable/: build.gradle
colorpicker/: build.gradle
colorpickerview/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
logolicious/: build.gradle  google-services.json  local.properties
logolicious/gradle/wrapper/: gradle-wrapper.properties
logolicious/src/main/: AndroidManifest.xml  AndroidManifest.xml.mine  AndroidManifest.xml.r35  AndroidManifest.xml.r38
logolicious/src/main/assets/: SharedPrefKeys
logolicious/src/main/cpp/: CMakeLists.txt  Heap.cpp  JniBitmapOperationsLibrary.cpp  JniBitmapOperationsLibrary.h  native-lib.c
logolicious/src/main/jni/: native-lib.c
logolicious/src/main/res/anim/: wheel_myanimation.xml
logolicious/src/main/res/drawable/: backrepeat.xml  bg_seek_progress.xml  button_grey_edge.xml  button_white_edge.xml  dotted.xml  ic_font.xml  imageview_white_edge.xml  live_blink.xml  menu_bg_edge.xml  option_background.xml  progress.xml  progressbar3.xml  seekbar_background1.xml  seekbar_background2.xml  seekbar_progress1.xml  seekbar_progress2.xml  seekbar_style1.xml  seekbar_style2.xml  seekbar_thumb1.xml  seekbar_wrapbackground.xml  shadow_rect.xml  toggle_button_textcenter.xml  wheel_val.xml  (+2 more)
logolicious/src/main/res/drawable-ldpi/: styled_progress.xml  styled_progress2.xml
logolicious/src/main/res/drawable-mdpi/: roundbt.xml
logolicious/src/main/res/drawable-xhdpi/: button_black_edge.xml  button_black_edge2.xml
(+238 files in other folders)
